# Scribr

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml
VoiceType/: README.md  Scribr.spec  app.py  build_dmg.sh  context_detector.py  corrector.py  export_icons.py  history.py  hotkey.py  injector.py  menubar.py  overlay.py  recorder.py  requirements.txt  settings.py  settings_window.py  setup_app.py  stats.py  style.py  test_stage2.py  test_tray_anim.py  transcriber.py  welcome_window.py  widgets.py
VoiceType/assets/: Scribr.icns  Scribr_Menubar.html  Scribr_Pill.html  Scribr_Pill_AI.html  VoiceType_Menubar_Settings.html  VoiceType_Pill_Prototype.html  scribr_brand_friendly.html  scribr_menubar_preview.html
tests/: test_corrector.py  test_history.py  test_settings.py
voicetype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
